@@ -5,6 +5,7 @@ include MANIFEST.in
 include MANIFEST
 include ChangeLog
 include gsl-mode-0.1.el
+include src/include/*.[ch]
 include src/sets/*.[ch]
 include src/heapy/*.[ch]
 include specs/*.gsl
